@@ -39,6 +39,7 @@
 
 #include <stdio.h>
 #include <string.h>
+#include <unistd.h>
 #include "common.h"
 #include "target.h"
 #include "basicdefs.h"
